# NoiseToy

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: noise.comp  noise2D.comp  noise3D.comp  quad.frag  quad.vert
src/: main.cpp
